tests/ui/new_without_default.stderr
error: you should consider deriving a `Default` implementation for `Foo`
  --> $DIR/new_without_default.rs:10:5
   |
10 |     pub fn new() -> Foo { Foo }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/new_without_default.rs:5:30
   |
5  | #![deny(new_without_default, new_without_default_derive)]
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try this
   | #[derive(Default)]

error: you should consider deriving a `Default` implementation for `Bar`
  --> $DIR/new_without_default.rs:16:5
   |
16 |     pub fn new() -> Self { Bar }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try this
   | #[derive(Default)]

error: you should consider adding a `Default` implementation for `LtKo<'c>`
  --> $DIR/new_without_default.rs:64:5
   |
64 |     pub fn new() -> LtKo<'c> { unimplemented!() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/new_without_default.rs:5:9
   |
5  | #![deny(new_without_default, new_without_default_derive)]
   |         ^^^^^^^^^^^^^^^^^^^
help: try this
   |     impl Default for LtKo<'c> {
   |         fn default() -> Self {
   |             Self::new()
   |         }
   |     }
   | 
...

error: aborting due to 3 previous errors

